--- a/src/app/pages/loan/loan.page.html
+++ b/src/app/pages/loan/loan.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 <ion-content fullscreen>
   <div *ngFor="let i of results"class="container">
-    <ion-card class="container">
+    <ion-card class="container" mode="ios">
       <h3>{{i.messageTitle}}</h3>
       <div>{{i.messageContent}}</div>
     </ion-card>
