--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -18,13 +18,13 @@
         </ion-input>
       </div>
       <div style="margin-left: 2rem; margin-right: 2rem;">
-        <ion-button color="success" class="login-page-button" expand="block" type="submit">Login</ion-button>
+        <ion-button color="success" mode="ios" class="login-page-button" expand="block" type="submit">Login</ion-button>
         <ion-label style="float: right;" (click)="forgotPassword()">Forgot your PIN?</ion-label>
       </div>
     </form>
     <div style="margin-top: 3rem; margin: 2rem;">
       <ion-label>New Customer?</ion-label>
-      <ion-button color="success" class="login-page-button" expand="block" routerLink="/signup">Sign Up</ion-button>
+      <ion-button color="success" mode="ios" class="login-page-button" expand="block" routerLink="/signup">Sign Up</ion-button>
     </div>
   </div>
   </div>
