--- a/src/app/pages/tell-a-friend/tell-a-friend.page.html
+++ b/src/app/pages/tell-a-friend/tell-a-friend.page.html
@@ -7,6 +7,8 @@
   </ion-toolbar>
 </ion-header>
 <ion-content fullscreen>
-  <p class="text-center">No Trip</p>
- 
+<!--  <p class="text-center">No Trip</p>-->
+<!--  <div #map id="maps"></div>-->
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d45705.04580836275!2d-0.20597692004554005!3d5.656186787256683!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdf9b92087c6757%3A0xceaec97104e63d54!2sGhana%20Institute%20of%20Management%20and%20Public%20Administration%20(GIMPA)!5e0!3m2!1sen!2sgh!4v1641585654387!5m2!1sen!2sgh" width="100%" height="90%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+<!--  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d127061.98381687827!2d-0.2064384!3d5.6131584000000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sgh!4v1641584399676!5m2!1sen!2sgh" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>-->
 </ion-content>
