--- a/src/app/pages/admin-dashboard/admin-dashboard.page.html
+++ b/src/app/pages/admin-dashboard/admin-dashboard.page.html
@@ -8,7 +8,7 @@
       <ion-avatar slot="end">
         <ion-icon name="person-circle-outline"></ion-icon>
       </ion-avatar>
-    <ion-label slot="end" class="ion-text-left">
+    <ion-label slot="end" class="ion-text-left"  (click)="presentActionSheet()">
       <h3>{{username}}</h3>
       <small>Online</small>
     </ion-label>
