--- a/src/app/pages/tell-a-friend/tell-a-friend.page.scss
+++ b/src/app/pages/tell-a-friend/tell-a-friend.page.scss
@@ -1,6 +1,6 @@
 /* Set the size of the div element that contains the map */
-#map {
-    height: 400px;
+#maps {
+    height: 100% !important;
     /* The height is 400 pixels */
     width: 100%;
     /* The width is the width of the web page */
