--- a/src/app/pages/view-user/view-user.page.html
+++ b/src/app/pages/view-user/view-user.page.html
@@ -5,6 +5,13 @@
     </ion-buttons>
     <ion-title style="text-align:center;">Booked Travellers</ion-title>
     <!-- <img slot="end" class="sw-img" src="/assets/icons/bus.png" alt="dalex-swift" /> -->
+    <ion-avatar slot="end">
+      <ion-icon name="person-circle-outline"></ion-icon>
+    </ion-avatar>
+    <ion-label slot="end" class="ion-text-left">
+      <h3>{{username}}</h3>
+      <small>Online</small>
+    </ion-label>
   </ion-toolbar>
 </ion-header>
 
@@ -34,7 +41,7 @@
         <td>
           <ion-row>
             <ion-col>
-              <ion-button mode="ios" color="tertiary" expand="block">EDIT</ion-button>
+              <ion-button mode="ios" color="success" expand="block">EDIT</ion-button>
             </ion-col>
             <ion-col>
               <ion-button mode="ios" color="danger" expand="block" (click)="deleteRecord(i.tripID)">DELETE</ion-button>
