refactor: filter by admin role

--- a/src/app/pages/add-bus/add-bus.page.html
+++ b/src/app/pages/add-bus/add-bus.page.html
@@ -41,7 +41,11 @@
         </ion-col>
       </ion-row>
       <ion-label>Brand</ion-label>
-      <ion-input type="text" formControlName="brand" placeholder="Brand name"></ion-input>
+      <ion-select formControlName="brand" placeholder="Brand name" mode="ios"  interface="action-sheet">
+        <ion-select-option *ngIf="vipApproved" value="VIP">VIP</ion-select-option>
+        <ion-select-option *ngIf="vvipApproved" value="VVIP">VVIP</ion-select-option>
+        <ion-select-option *ngIf="stcApproved" value="STC">STC</ion-select-option>
+      </ion-select>
       <ion-button color="success" class="mt-3" expand="block" mode="ios" type="submit">Add Bus</ion-button>
     </form>
 
