--- a/src/app/pages/valid-tickets/valid-tickets.page.html
+++ b/src/app/pages/valid-tickets/valid-tickets.page.html
@@ -4,6 +4,10 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title style="text-align:center;">Valid Tickets</ion-title>
+    <ion-label slot="end" class="ion-text-left">
+      <h3>{{username}}</h3>
+      <small>Online</small>
+    </ion-label>
     <!-- <img slot="end" class="sw-img" src="/assets/icons/bus.png" alt="dalex-swift" /> -->
   </ion-toolbar>
 </ion-header>
