--- a/src/app/pages/add-user/add-user.page.html
+++ b/src/app/pages/add-user/add-user.page.html
@@ -4,6 +4,13 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title style="text-align:center;">Create New User</ion-title>
+    <ion-avatar slot="end">
+      <ion-icon name="person-circle-outline"></ion-icon>
+    </ion-avatar>
+    <ion-label slot="end" class="ion-text-left">
+      <h3>{{username}}</h3>
+      <small>Online</small>
+    </ion-label>
     <!-- <img slot="end" class="sw-img" src="/assets/icons/bus.png" alt="dalex-swift" /> -->
   </ion-toolbar>
 </ion-header>
