--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -17,7 +17,7 @@
         <ion-input shape="rectangle" class="login-page-input" name="pin" formControlName="pin" type="password">
         </ion-input>
       </div>
-      <div style="margin-left: 2rem; margin-right: 2rem;">
+      <div style="margin: 2rem">
         <ion-button color="success" mode="ios" class="login-page-button" expand="block" type="submit">Login</ion-button>
         <ion-label style="float: right;" (click)="forgotPassword()">Forgot your PIN?</ion-label>
       </div>
