--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -24,7 +24,7 @@
       <ion-button color="secondary" class="login-page-button" expand="block" routerLink="/dashboard">Login</ion-button>
       <ion-label style="float: right;">Forgot your PIN?</ion-label>
     </div> -->
-    <div style="margin-top: 3rem; margin: 2rem;">
+    <div style="margin: 2rem">
       <!-- <ion-label>New Customer?</ion-label> -->
       <ion-button color="success" class="login-page-button" expand="block" routerLink="/signup" type="submit">Sign Up</ion-button>
       <h5 routerLink="/login" style="cursor: pointer;">Back to Login</h5>
