--- a/src/app/pages/admin-login/admin-login.page.html
+++ b/src/app/pages/admin-login/admin-login.page.html
@@ -12,10 +12,10 @@
         </div>
         <form action="login.php" [formGroup]="form" (submit)="submit($event)" >
           <ion-label>Phone Number</ion-label>
-          <ion-input type="tel" inputmode="tel" name="phoneNumber" formControlName="phoneNumber"></ion-input>
+          <ion-input type="tel" inputmode="tel" name="phoneNumber" formControlName="phoneNumber" maxlength="10"></ion-input>
           <ion-label>PIN</ion-label>
           <ion-input name="pin" formControlName="pin" type="password"></ion-input>
-          <ion-button color="success" class="mt-3" expand="block" mode="ios" type="submit"> LOGIN</ion-button>
+          <ion-button color="success" class="mt-3" expand="block" mode="ios" type="submit" maxlength="4"> LOGIN</ion-button>
         </form>
       </ion-col>
     </ion-row>
