--- a/src/app/pages/view-user/view-user.page.html
+++ b/src/app/pages/view-user/view-user.page.html
@@ -41,7 +41,7 @@
         <td>
           <ion-row>
             <ion-col>
-              <ion-button mode="ios" color="success" expand="block">EDIT</ion-button>
+              <ion-button mode="ios" color="success" expand="block" routerLink="/edit-trip">EDIT</ion-button>
             </ion-col>
             <ion-col>
               <ion-button mode="ios" color="danger" expand="block" (click)="deleteRecord(i.tripID)">DELETE</ion-button>
