--- a/src/app/pages/admin-dashboard/admin-dashboard.page.html
+++ b/src/app/pages/admin-dashboard/admin-dashboard.page.html
@@ -64,5 +64,16 @@
         </div>
       </ion-card>
     </ion-col>
+    <ion-col size="4">
+      <ion-card mode="ios" class="ion-padding" routerLink="/booking">
+        <div class="icon-style look4">
+          <ion-icon name="add-circle-outline" mode="ios"></ion-icon>
+        </div>
+        <div>
+          <h2>Book A Trip</h2>
+          <small>Book a trip for a user</small>
+        </div>
+      </ion-card>
+    </ion-col>
   </ion-row>
 </ion-content>
