--- a/src/app/pages/admin-dashboard/admin-dashboard.page.scss
+++ b/src/app/pages/admin-dashboard/admin-dashboard.page.scss
@@ -30,6 +30,11 @@ ion-icon{
   background-color: #F3D9FF;
   padding: 110px 30px 0px 49px;
 }
+.look4{
+  color: #ff6968;
+  background-color: #ffa59f;
+  padding: 110px 30px 0px 49px;
+}
 .look3{
   color:#FFDA91;
   background-color: #FFF5DA;
